--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^17.0.1",
     "react-infinite-scroller": "^1.2.4",
     "react-loading-skeleton": "^2.1.1",
