--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "node-sass": "4.14.1",
+    "node-sass": "^7.0.1",
     "react": "^17.0.1",
     "react-confirm-alert": "^2.6.2",
     "react-dom": "^17.0.1",
@@ -15,7 +15,7 @@
     "react-loading-skeleton": "^2.1.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
